SubBt/force-app/main/default/objects/Walk_Through_List__c/Walk_Through_List__c.object-meta.xml
<CustomObject>
    <label>Walk Through</label>
    <nameField>
        <displayFormat>WT# {000000}</displayFormat>
        <label>Walk Through List Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Walk Through&apos;s</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>