SubBt/force-app/main/default/objects/Walk_Through_List__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Walkthrough Specialist</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Walkthrough_Lists</relationshipName>
    <type>Lookup</type>
</CustomField>