SubBt/force-app/main/default/objects/Walk_Through_List__c/fields/Walk_Through_Date__c.field-meta.xml
<CustomField>
    <fullName>Walk_Through_Date__c</fullName>
    <label>Walk Through Date</label>
    <type>Date</type>
</CustomField>